WIP
- Add endpoint to refresh cache
- Update postman collection
- Remove unused service